# Spillway

./: .gitignore  README.md  pyproject.toml  run_spillway.py  set_api_key.py
_doc/: spillway-analyza.md  spillway-plan-implementace.md  spillway-rozvoj-a-napady.md
spikes/: demo_formatting.py  spend_estimate.py  spike_a_paste.py  spike_b_whisper.py  spike_c_fkey.py  spike_c_hotkey.py
src/spillway/: __init__.py  app.py  audio.py  autostart.py  baricon.py  config.py  context.py  design.py  hotkey.py  hud.py  keymap.py  lifecycle.py  llm.py  paste.py  settings.py  settings_window.py  smart_spacing.py  stats.py  transcribe.py  tray.py
tests/: conftest.py  test_logic.py
