[project]
name = "spillway"
version = "0.0.1"
description = "Lokální diktovací nástroj pro macOS: Whisper (lokální přepis) + Claude (úprava) + univerzální vložení do libovolné aplikace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # macOS nativní API (hotkey, paste, kontext)
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-ApplicationServices>=10.3",  # Accessibility (AXUIElement) — chytrá mezera
    # F1 pipeline
    "sounddevice>=0.4.6",   # nahrávání mikrofonu (PortAudio)
    "faster-whisper>=1.0",  # lokální přepis (large-v3-turbo, CPU)
    "numpy>=1.26",
    # F2 AI úprava
    "anthropic>=0.40",      # Claude API (Haiku 4.5 cleanup)
    "keyring>=25.0",        # API klíč v macOS Keychain
    # F3 menu bar
    "rumps>=0.4",           # menu bar ikona se stavem
]

# Fáze F3+ přidají: pydantic (validace configu).

[tool.uv]
# Zatím není instalovatelný balíček (běží přes run_spillway.py); přepneme ve F3.
package = false
